# awannacu_cs6300

./: .gitignore  CMakeLists.txt  Makefile  README.md  batch1.sh  batch_4_5_2nodes.sh  batch_4_5_3nodes.sh  batch_4_5_4nodes.sh  compare.py  display.py  input_medium.raw  modules.sh  scaling_study.md  test.py  test2.py
cli/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  TestFunction.cmake
include/solver/: concepts.hpp
lib/: CMakeLists.txt  README.md  bool.hpp  core.cpp  core.hpp  mdspan.hpp  ray_casting.hpp  timer.hpp  vec2.hpp  vec3.hpp
lib/solver/: concepts.hpp
lib/tests/: CMakeLists.txt  README.md  bool.cpp  read_input.cpp  shared_lib_tests.cpp  timer.cpp  vec2.cpp  vec3.cpp  write_output.cpp
src/: CMakeLists.txt  README.md  main.cpp  solvers.hpp
src/distributed_cpu/: CMakeLists.txt  bresenham_solver.cpp  distributed_cpu.cpp  distributed_cpu.hpp  distributed_cpu_main.cpp  img_out.raw  img_srtm_out.raw  m300_out_10.raw  main.cpp  mpi_cpu_awcu.cpp  seperate_solver.cpp
src/distributed_gpu/: CMakeLists.txt  args.cpp  args.hpp  dist_gpu.cu  dist_gpu.cuh  distributed_gpu.cpp  distributed_gpu.hpp  distributed_gpu_main.cpp  main.cpp
src/parallel_cpu/: CMakeLists.txt  main.cpp  parallel_cpu.cpp  parallel_cpu.hpp  parallel_cpu_main.cpp
src/parallel_gpu/: CMakeLists.txt  main.cu  parallel_gpu.cpp  parallel_gpu.cu  parallel_gpu.cuh  parallel_gpu.hpp  parallel_gpu_main.cpp
src/serial/: CMakeLists.txt  main.cpp  serial.cpp  serial.hpp  serial_main.cpp
test/: CMakeLists.txt  README.md  basic_images.hpp  solvers.cpp
